# MAI-INFORMATION-SEARCH

./: .gitignore  README.md  requirements.txt
artifacts/screenshots/: cli_beatles_not_lennon.txt  cli_jazz_blues_guitar.txt  cli_rock_roll.txt  pipeline_extract_text.txt  pipeline_index_builder.txt  pipeline_stemmer.txt  pipeline_term_stats.txt  pipeline_tokenizer.txt
config/: crawler.yaml
cxx/: CMakeLists.txt
cxx/src/: index_builder.cpp  search_cli.cpp  stemmer.cpp  term_stats.cpp  tokenizer.cpp
scripts/: build_zipf_png.py  crawl_sitemaps.py  crawl_sitemaps_fast.py  extract_text.py  run_pipeline.sh
web/: app.py
web/templates/: index.html  results.html
